# freetext-jupyter

./: README.md  pyproject.toml
freetext_jupyter/: __init__.py
